--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chokidar": "^3.6.0",
     "csv-writer": "^1.6.0",
     "nodemon": "^3.1.4",
     "request": "^2.88.2"
